<?xml version="1.0"?>
<package format="2">
  <name>c1t_vesc_driver</name>
  <version>0.0.0</version>
  <description>The c1t_vesc_driver package</description>

  <maintainer email="carma@dot.gov">CARMA</maintainer>
  <author>Adam Morrissett</author>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>autoware_msgs</depend>
  <depend>cav_driver_utils</depend>
  <depend>cav_msgs</depend>
  <depend>roscpp</depend>
  <depend>vesc_ackermann</depend>
  <depend>vesc_driver</depend>
  <depend>vesc_msgs</depend>

  <export>
  </export>
</package>
